After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743508 - polkitd fails to start: patch for gio/gcredentialsprivate.h
polkitd fails to start: patch for gio/gcredentialsprivate.h
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.42.x
Other other
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-01-26 05:44 UTC by Peeter Must
Modified: 2015-02-02 13:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix authentication problem (718 bytes, patch)
2015-01-26 05:44 UTC, Peeter Must
reviewed Details | Review
git formatted patch (910 bytes, patch)
2015-01-27 02:53 UTC, Peeter Must
committed Details | Review

Description Peeter Must 2015-01-26 05:44:45 UTC
Created attachment 295415 [details] [review]
patch to fix authentication problem

OS: DragonFlyBSD


Overview: 

polkitd fails to start as a dbus service. 


Steps to reproduce: 

Start system dbus, start hald. 


Actual result: 

dbus fails to activate polkitd. 


Expected result: 

dbus should have successfully activated polkitd. 


Cause: 

The issue originates in the missing support for DragonFly in the credentials passing mechanism of GDBus in GIO. The patch attached fixes the problem: it gives DragonFly the same status that FreeBSD has in that DragonFly will use the same mechanism that FreeBSD does. It is tested and works.
Comment 1 Emmanuele Bassi (:ebassi) 2015-01-26 14:15:13 UTC
Review of attachment 295415 [details] [review]:

thanks for the patch.

could you please attach a patch generated through `git format-patch`? it makes it easier to apply it, and to credit your work properly.

::: gio/gcredentialsprivate.h.orig
@@ +40,3 @@
 #define G_CREDENTIALS_SPOOFING_SUPPORTED 1
 
+#elif defined(__DragonFly__)

instead of duplicating everything, could you please add `defined (__DragonFly__)` to the list above, i.e.:

#elif defined(__FreeBSD__) || defined(__FreeBSD_kernel__) || defined(__GNU__) || defined(__DragonFly__)
Comment 2 Peeter Must 2015-01-27 02:53:07 UTC
Created attachment 295498 [details] [review]
git formatted patch

Thanks, git formatted patch attached.
Comment 3 Emmanuele Bassi (:ebassi) 2015-01-27 09:47:46 UTC
Review of attachment 295498 [details] [review]:

thanks!

I think the patch looks good, but I'll wait for another GLib developer to comment.

now would be a great time to look at GLib's policy for platform support on the wiki: https://wiki.gnome.org/Projects/GLib/SupportedPlatforms

if the DragonFly project could set up a continuous build of GLib, or at least set up a test plan to avoid future regressions, it would be stellar.
Comment 4 Dan Winship 2015-01-27 12:42:15 UTC
yeah, looks good
Comment 5 Peeter Must 2015-02-02 02:48:36 UTC
Thanks again. DragonFly builds packages including glib on a weekly (or so) basis, see e.g. here for the (current) release 

http://avalon.dragonflybsd.org/dports/dragonfly:4.0:x86:64/LATEST/All/

jhbuild sounds interesting, we might look into this as well. 

Question: will this patch make into glib 2.43 and newer as well? At least at the moment I did not see it in the 2.43 tree.
Comment 6 Dan Winship 2015-02-02 08:57:43 UTC
(In reply to comment #5)
> Question: will this patch make into glib 2.43 and newer as well? At least at
> the moment I did not see it in the 2.43 tree.

It's *only* in 2.43 / git master. Note that I committed a second patch after yours, so it doesn't look exactly the same as after your commit.
Comment 7 Peeter Must 2015-02-02 13:03:15 UTC
Cool, thanks!