gcredentials: Add support for DragonFly

https://bugzilla.gnome.org/show_bug.cgi?id=743508